#32 commented out lines to make build, ignore the build output file.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ node_modules
 
 terraform.tfvars
 
+# Ignore the built output file
+terraform-provider-terratowns/terraform-provider-terratowns_v*
+
