--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,7 @@ tasks:
       source ./bin/generate_tfrc_credentials
       source ./bin/set_tf_alias
       cp $PROJECT_ROOT/terraform.tfvars.setup $PROJECT_ROOT/terraform.tfvars
+      source ./bin/terratowns/build_provider
   - name: sinatra
     before: | 
       cd terratowns_mock_server
